syntax = "proto3";
option go_package = "mutual.com/proto";
package proto;

service RicartAgrawala {
    rpc RequestAcces(ReqMes) returns (Ack);
    rpc RespondAcces(ReqMes) returns (Ack);
}

message ReqMes{
    int32 nodeId= 1;
    int32 lamportTimestamp = 2;
}

message Ack{
    int32 statusCode= 1;
}